// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Header Header no submenu 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <header
      aria-label="main header"
      className="bx--header custom-class-name Headerstory__StyledHeader-st8jpc-0 hyHMot"
    >
      <a
        className="bx--skip-to-content"
        href="skip"
        tabIndex="0"
      >
        Skip to main content
      </a>
      <button
        aria-label="Open menu"
        className="bx--header__action bx--header__menu-trigger bx--header__menu-toggle bx--header__menu-toggle__hidden"
        onClick={null}
        title="Open menu"
        type="button"
      >
        <svg
          aria-hidden={true}
          focusable="false"
          height={20}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 14.8H18V16H2zM2 11.2H18V12.399999999999999H2zM2 7.6H18V8.799999999999999H2zM2 4H18V5.2H2z"
          />
        </svg>
      </button>
      <a
        className="bx--header__name"
        href="http://localhost:8989"
      >
        <span
          className="bx--header__name--prefix"
        >
          IBM
        </span>
         
        Watson IoT Platform 
      </a>
      <div
        className="bx--header__global"
      >
        <button
          aria-label="user"
          className="bx--header-action-btn bx--header__action"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            description="Icon"
            fill="white"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M5,13.2v-1.5c0-0.9,0.6-1.6,1.5-1.7h3c0.9,0.1,1.5,0.8,1.5,1.7v1.5	C9.1,14.3,6.9,14.3,5,13.2L5,13.2z M12,12l0-0.8c0-0.9-1.1-2.1-2.5-2.2h-3C5.1,9.1,4,10.3,4,11.7l0,0.5v0.3c-2.5-2.2-2.7-6-0.5-8.5	s6-2.7,8.5-0.5s2.7,6,0.5,8.5c-0.1,0.2-0.3,0.3-0.5,0.5V12z"
            />
            <path
              d="M8,3C6.6,3,5.5,4.1,5.5,5.5S6.6,8,8,8s2.5-1.1,2.5-2.5S9.4,3,8,3z M8,7C7.2,7,6.5,6.3,6.5,5.5S7.2,4,8,4s1.5,0.7,1.5,1.5	S8.8,7,8,7z"
            />
          </svg>
        </button>
      </div>
    </header>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Header header submenu 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100vh",
          "width": "100%",
        }
      }
    >
      <header
        aria-label="main header"
        className="bx--header custom-class-name Headerstory__StyledHeader-st8jpc-0 hyHMot"
      >
        <a
          className="bx--skip-to-content"
          href="skip"
          tabIndex="0"
        >
          Skip to main content
        </a>
        <button
          aria-label="Open menu"
          className="bx--header__action bx--header__menu-trigger bx--header__menu-toggle bx--header__menu-toggle__hidden"
          onClick={null}
          title="Open menu"
          type="button"
        >
          <svg
            aria-hidden={true}
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 20 20"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 14.8H18V16H2zM2 11.2H18V12.399999999999999H2zM2 7.6H18V8.799999999999999H2zM2 4H18V5.2H2z"
            />
          </svg>
        </button>
        <a
          className="bx--header__name"
          href="http://localhost:8989"
        >
          <span
            className="bx--header__name--prefix"
          >
            IBM
          </span>
           
          Watson IoT Platform 
        </a>
        <div
          className="bx--header__global"
        >
          <div
            className="bx--header__submenu bx--header-action-btn action-btn__group"
            data-testid="action-btn__group"
            onBlur={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="bx--header__submenu bx--header-action-btn"
            >
              <a
                aria-expanded={false}
                aria-haspopup="menu"
                aria-label="user"
                className="bx--header__menu-item bx--header__menu-title"
                data-testid="menuitem"
                href=""
                onClick={[Function]}
                role="menuitem"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  description="Icon"
                  fill="white"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M5,13.2v-1.5c0-0.9,0.6-1.6,1.5-1.7h3c0.9,0.1,1.5,0.8,1.5,1.7v1.5	C9.1,14.3,6.9,14.3,5,13.2L5,13.2z M12,12l0-0.8c0-0.9-1.1-2.1-2.5-2.2h-3C5.1,9.1,4,10.3,4,11.7l0,0.5v0.3c-2.5-2.2-2.7-6-0.5-8.5	s6-2.7,8.5-0.5s2.7,6,0.5,8.5c-0.1,0.2-0.3,0.3-0.5,0.5V12z"
                  />
                  <path
                    d="M8,3C6.6,3,5.5,4.1,5.5,5.5S6.6,8,8,8s2.5-1.1,2.5-2.5S9.4,3,8,3z M8,7C7.2,7,6.5,6.3,6.5,5.5S7.2,4,8,4s1.5,0.7,1.5,1.5	S8.8,7,8,7z"
                  />
                </svg>
              </a>
              <ul
                aria-label="user"
                className="bx--header__menu"
                role="menu"
              >
                <li>
                  <a
                    className="bx--header__menu-item"
                    href="http://google.com"
                    rel="noopener noreferrer"
                    tabIndex={0}
                    target="_blank"
                    title="this is a title"
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      this is my message to you
                    </span>
                  </a>
                </li>
                <li
                  className="this"
                >
                  <button
                    className="bx--header__menu-item"
                    onClick={[Function]}
                    tabIndex={0}
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      <span>
                        JohnDoe@ibm.com
                        <svg
                          aria-hidden={true}
                          description="Icon"
                          fill="white"
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M5,13.2v-1.5c0-0.9,0.6-1.6,1.5-1.7h3c0.9,0.1,1.5,0.8,1.5,1.7v1.5	C9.1,14.3,6.9,14.3,5,13.2L5,13.2z M12,12l0-0.8c0-0.9-1.1-2.1-2.5-2.2h-3C5.1,9.1,4,10.3,4,11.7l0,0.5v0.3c-2.5-2.2-2.7-6-0.5-8.5	s6-2.7,8.5-0.5s2.7,6,0.5,8.5c-0.1,0.2-0.3,0.3-0.5,0.5V12z"
                          />
                          <path
                            d="M8,3C6.6,3,5.5,4.1,5.5,5.5S6.6,8,8,8s2.5-1.1,2.5-2.5S9.4,3,8,3z M8,7C7.2,7,6.5,6.3,6.5,5.5S7.2,4,8,4s1.5,0.7,1.5,1.5	S8.8,7,8,7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </header>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Header header subtitle 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100vh",
          "width": "100%",
        }
      }
    >
      <header
        aria-label="main header"
        className="bx--header custom-class-name Headerstory__StyledHeader-st8jpc-0 hyHMot"
      >
        <a
          className="bx--skip-to-content"
          href="skip"
          tabIndex="0"
        >
          Skip to main content
        </a>
        <button
          aria-label="Open menu"
          className="bx--header__action bx--header__menu-trigger bx--header__menu-toggle bx--header__menu-toggle__hidden"
          onClick={null}
          title="Open menu"
          type="button"
        >
          <svg
            aria-hidden={true}
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 20 20"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 14.8H18V16H2zM2 11.2H18V12.399999999999999H2zM2 7.6H18V8.799999999999999H2zM2 4H18V5.2H2z"
            />
          </svg>
        </button>
        <a
          className="bx--header__name"
          href="http://localhost:8989"
        >
          <span
            className="bx--header__name--prefix"
          >
            IBM
          </span>
           
          Watson IoT Platform 
          <div
            className="iot--header__subtitle"
          >
            Monitor
          </div>
        </a>
        <div
          className="bx--header__global"
        >
          <div
            className="bx--header__submenu bx--header-action-btn action-btn__group"
            data-testid="action-btn__group"
            onBlur={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="bx--header__submenu bx--header-action-btn"
            >
              <a
                aria-expanded={false}
                aria-haspopup="menu"
                aria-label="user"
                className="bx--header__menu-item bx--header__menu-title"
                data-testid="menuitem"
                href=""
                onClick={[Function]}
                role="menuitem"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  description="Icon"
                  fill="white"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M5,13.2v-1.5c0-0.9,0.6-1.6,1.5-1.7h3c0.9,0.1,1.5,0.8,1.5,1.7v1.5	C9.1,14.3,6.9,14.3,5,13.2L5,13.2z M12,12l0-0.8c0-0.9-1.1-2.1-2.5-2.2h-3C5.1,9.1,4,10.3,4,11.7l0,0.5v0.3c-2.5-2.2-2.7-6-0.5-8.5	s6-2.7,8.5-0.5s2.7,6,0.5,8.5c-0.1,0.2-0.3,0.3-0.5,0.5V12z"
                  />
                  <path
                    d="M8,3C6.6,3,5.5,4.1,5.5,5.5S6.6,8,8,8s2.5-1.1,2.5-2.5S9.4,3,8,3z M8,7C7.2,7,6.5,6.3,6.5,5.5S7.2,4,8,4s1.5,0.7,1.5,1.5	S8.8,7,8,7z"
                  />
                </svg>
              </a>
              <ul
                aria-label="user"
                className="bx--header__menu"
                role="menu"
              >
                <li>
                  <a
                    className="bx--header__menu-item"
                    href="http://google.com"
                    rel="noopener noreferrer"
                    tabIndex={0}
                    target="_blank"
                    title="this is a title"
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      this is my message to you
                    </span>
                  </a>
                </li>
                <li
                  className="this"
                >
                  <button
                    className="bx--header__menu-item"
                    onClick={[Function]}
                    tabIndex={0}
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      <span>
                        JohnDoe@ibm.com
                        <svg
                          aria-hidden={true}
                          description="Icon"
                          fill="white"
                          focusable="false"
                          height={16}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M5,13.2v-1.5c0-0.9,0.6-1.6,1.5-1.7h3c0.9,0.1,1.5,0.8,1.5,1.7v1.5	C9.1,14.3,6.9,14.3,5,13.2L5,13.2z M12,12l0-0.8c0-0.9-1.1-2.1-2.5-2.2h-3C5.1,9.1,4,10.3,4,11.7l0,0.5v0.3c-2.5-2.2-2.7-6-0.5-8.5	s6-2.7,8.5-0.5s2.7,6,0.5,8.5c-0.1,0.2-0.3,0.3-0.5,0.5V12z"
                          />
                          <path
                            d="M8,3C6.6,3,5.5,4.1,5.5,5.5S6.6,8,8,8s2.5-1.1,2.5-2.5S9.4,3,8,3z M8,7C7.2,7,6.5,6.3,6.5,5.5S7.2,4,8,4s1.5,0.7,1.5,1.5	S8.8,7,8,7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </header>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
